Closed Bug 518241 Opened 14 years ago Closed 14 years ago

crashreporter: Gtk-CRITICAL **: gtk_widget_set_sensitive: assertion `GTK_IS_WIDGET (widget)' failed

Categories

(Toolkit :: Crash Reporting, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: karlt, Assigned: karlt)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
      No description provided.
Attachment #402217 - Flags: review?(ted.mielczarek)
Attachment #402217 - Flags: review?(ted.mielczarek) → review+
http://hg.mozilla.org/mozilla-central/rev/d2d639edd57b
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
You need to log in before you can comment on or make changes to this bug.