bug 518241 gtk_widget_set_sensitive: assertion `GTK_IS_WIDGET (widget)' failed r=ted