toolkit/crashreporter/client/crashreporter_linux.cpp
@@ -309,11 +309,13 @@ static void SendReport()
   gtk_widget_set_sensitive(gSubmitReportCheck, FALSE);
   gtk_widget_set_sensitive(gViewReportButton, FALSE);
   gtk_widget_set_sensitive(gCommentText, FALSE);
-  gtk_widget_set_sensitive(gIncludeURLCheck, FALSE);
+  if (gIncludeURLCheck)
+    gtk_widget_set_sensitive(gIncludeURLCheck, FALSE);
   gtk_widget_set_sensitive(gEmailMeCheck, FALSE);
   gtk_widget_set_sensitive(gEmailEntry, FALSE);
   gtk_widget_set_sensitive(gCloseButton, FALSE);
-  gtk_widget_set_sensitive(gRestartButton, FALSE);
+  if (gRestartButton)
+    gtk_widget_set_sensitive(gRestartButton, FALSE);
   gtk_widget_show_all(gThrobber);
   gtk_label_set_text(GTK_LABEL(gProgressLabel),
                      gStrings[ST_REPORTDURINGSUBMIT].c_str());
@@ -387,7 +389,8 @@ static void UpdateSubmit()
   if (gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(gSubmitReportCheck))) {
     gtk_widget_set_sensitive(gViewReportButton, TRUE);
     gtk_widget_set_sensitive(gCommentText, TRUE);
-    gtk_widget_set_sensitive(gIncludeURLCheck, TRUE);
+    if (gIncludeURLCheck)
+      gtk_widget_set_sensitive(gIncludeURLCheck, TRUE);
     gtk_widget_set_sensitive(gEmailMeCheck, TRUE);
     gtk_widget_set_sensitive(gEmailEntry,
                              gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(gEmailMeCheck)));
@@ -396,7 +399,8 @@ static void UpdateSubmit()
   } else {
     gtk_widget_set_sensitive(gViewReportButton, FALSE);
     gtk_widget_set_sensitive(gCommentText, FALSE);
-    gtk_widget_set_sensitive(gIncludeURLCheck, FALSE);
+    if (gIncludeURLCheck)
+      gtk_widget_set_sensitive(gIncludeURLCheck, FALSE);
     gtk_widget_set_sensitive(gEmailMeCheck, FALSE);
     gtk_widget_set_sensitive(gEmailEntry, FALSE);
     gtk_label_set_text(GTK_LABEL(gProgressLabel), "");
